--- a/client/src/components/shell/AppShell.module.scss
+++ b/client/src/components/shell/AppShell.module.scss
@@ -36,9 +36,8 @@
   animation: none;
 
   @media (max-width: 768px) {
-    left: auto;
-    right: 20px;
-    transform: none;
+    left: 62%;
+    transform: translateX(-50%);
   }
 }
 
